<resources>
    <string name="app_name">Pedikura</string>
    <string name="action_settings">Nastavení</string>
    <string name="action_log">Logy</string>
    <string name="refresh">Obnovit</string>
    <string name="action_logout">Odhlásit se</string>


    <string name="settings_title">Nastavení</string>
    <string name="setting_download_data">Nahrát údaje ze serveru</string>
    <string name="settings_error">Tato funkce je zatím nefunkční!</string>

    <string name="backup_title">Přihlášení pro nahrání zálohy</string>
    <string name="backup_button">Nahrát zálohu</string>


    // new strings

    <string name="app_title">Pedikura</string>
    <string name="client_btn">Klienti</string>
    <string name="app_settings">Nastavení</string>

    <string name="add_client_btn">Přidat klienta</string>
    <string name="search_client">Vyhledat</string>


    <string name="client_card">Karta klienta</string>
    <string name="client_card_with_ID">Karta klienta s ID: %s</string>
    <string name="edit_customer">Upravit</string>a
    <string name="delete_customer">Smazat</string>

    <string name="last_name">Příjmení:</string>
    <string name="first_name">Jméno:</string>
    <string name="age">Věk:</string>
    <string name="profession">Profese:</string>
    <string name="contact">Kontakt:</string>
    <string name="address">Adresa:</string>
    <string name="last_visit">Poslední návštěva:</string>


    <string name="problems">Kožní problémy na nohou:</string>
    <string name="problems_bv">Bércový vřed</string>
    <string name="problems_b">Bradavice</string>
    <string name="problems_k">Keratóza</string>
    <string name="problems_kp">Kladívkový prst</string>
    <string name="problems_ko">Kuří oko</string>
    <string name="problems_mn">Mykotický nehet</string>
    <string name="problems_mp">Mykotická pokožka</string>
    <string name="problems_n">Neuropatie</string>
    <string name="problems_pc">Po chemoterapii</string>
    <string name="problems_pn">Potivé nohy</string>
    <string name="problems_p">Praskliny</string>
    <string name="problems_sp">Suchá pokožka</string>
    <string name="problems_zn">Zarostlý nehet</string>
    <string name="problems_h">Hallux</string>
    <string name="problems_others">Jiné</string>

    <string name="treatment">Léčby, nemoci klienta:</string>
    <string name="treatment_a">Alergie</string>
    <string name="treatment_co">Cévní onemocnění</string>
    <string name="treatment_d">Diabetik</string>
    <string name="treatment_kz">Křečové žíly</string>
    <string name="treatment_l">Lupénka</string>
    <string name="treatment_h">Hemofilie</string>
    <string name="treatment_others">Jiné</string>

    <string name="notes">Poznámky:</string>
    <string name="recommendation">Doporučení:</string>

    <string name="save_customers_BTN">Uložit klienta</string>

    <string name="customer_photos">Fotky klienta:</string>
    <string name="edit_photos_BTN">Přidat fotku</string>

    <string name="login_title">Přihlášení</string>
    <string name="login">Přihlásit</string>
    <string name="signuphere">Registrovat se zde</string>

    <string name="signup_title">Registrace</string>
    <string name="signup">Registrovat</string>
    <string name="loginhere">Přihlásit se zde</string>

    <string name="fullname">Jméno a přijmení</string>
    <string name="email">Emailová adresa</string>
    <string name="password">Heslo</string>
    <string name="username">Přezdívka</string>

    //Settings
    <string name="setting_dialog_title">Nahrání dat ze zálohy na serveru</string>
    <string name="setting_dialog_message">Opravdu chcete nahrát data ze zálohy na serveru?\nPřijdete tak o všechny zákazníky uložené v aplikaci.</string>
    <string name="setting_dialog_positive">Ano</string>
    <string name="setting_dialog_negative">Ne</string>
    <string name="footImageDescription">foot</string>


</resources>