<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".customers.CustomersFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/client_btn"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/search_customer_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/search_client"
        android:ems="10"
        android:hint="@string/search_client"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="LinearLayoutManager">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/add_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_client_btn"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/username_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/username"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>