<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/settings_title" />

    <Button
        android:id="@+id/upload_test_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_download_data" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_error"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/purple_200"/>
</LinearLayout>