<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customers.CustomerDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="173sp"
        tools:layout_editor_absoluteY="119sp">

        <TextView
            android:id="@+id/client_card_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_card"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lname_TV"
                android:textAlignment="center"
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lname1_TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_name"
                android:textSize="30sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fname_TV"
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/fname1_TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/first_name"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/age_TV"
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/age1_TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/age"
                android:textSize="30sp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/profession_TV"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/profession"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/profession1_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profession"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/contact_TV"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/contact1_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contact"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/address_TV"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/address1_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address"
            android:textSize="30sp" />
    </LinearLayout>

        <TextView
            android:id="@+id/problems_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problems"
            android:textStyle="bold"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/problems1_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problems"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/treatment_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/treatment"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/treatment1_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/treatment"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/notes_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/notes1_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textSize="30sp"/>

        <ImageView
            android:id="@+id/foot_IV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:src="@drawable/foot"
            android:background="@drawable/image_border"/>

        <TextView
            android:id="@+id/recommendation_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recommendation"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/recommendation_TV1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recommendation"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/photos_help_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_photos"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <LinearLayout
            android:id="@+id/image_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_customer_BTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/edit_customer" />

            <Button
                android:id="@+id/delete_customer_BTN"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/delete_customer" />

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>